# py-mkl-pardiso

./: .gitignore  LICENSE  README.md  py-mkl-pardiso.cpp  pyproject.toml  setup.py  valgrind-python.supp
.github/workflows/: sanitizers.yml  test.yml  wheels.yml
benchmarks/: refactor_benchmark.py
pymklpardiso/: __init__.py
tests/: check_linux_wheel_bundled.py  check_linux_wheel_static.py  check_windows_wheel_bundled.py  check_windows_wheel_static.py  conftest.py  test_macldlt.py  test_pardiso.py  test_wrapper.py
